<resources>
    <string name="app_name">FunSettingsUITest</string>
    <string name="app_label">FunUITest</string>

    <!-- main activity -->
    <string name="title_activity_main">Main Activity</string>
    <string name="label_demo">Test demo</string>
    <string name="label_run_instruments">Run instrument ui tests</string>
    <string name="label_run_utils_test">Run utils test</string>
    <string name="label_run_utils_test2">Run utils test2</string>
    <string name="btn_start">Start</string>
    <string name="btn_exit">Exit</string>

    <!-- demo activity -->
    <string name="title_activity_demo">Demo Activity</string>
    <string name="editor_user_name_hint">Your name</string>
    <string name="btn_ok">OK</string>
    <string name="message_hello">Hello Message</string>
    <string name="btn_http_test">OkHttp</string>
    <string name="message_http_test">Http Test</string>
    <string name="btn_leak_test">LeakCanary</string>
    <string name="message_leak_test">Leak Test</string>

    <!-- instrument test runner activity -->
    <string name="title_activity_inst_test">Instrument test Activity</string>
    <string name="label_inst_test_method">Test Method</string>
    <string name="editor_inst_test_method_hint">class#method</string>
    <string name="label_exec_time">Execution Time</string>
    <string name="editor_exec_time_hint">minutes</string>
    <string name="btn_run_inst_test">Run Test</string>

    <!-- utils test activity -->
    <string name="title_activity_utils_test">Utils Activity</string>
    <string name="btn_utils_test">Test</string>
    <string name="message_device_utils_test">Device Utils Test</string>
    <string name="message_shell_utils_test">Shell Utils Test</string>
    <string name="message_package_utils_test">Package Utils Test</string>
    <string name="message_start_activity_test">Start Activity Test</string>
    <string name="message_file_utils_test">File Utils Test</string>

    <!-- utils test activity2 -->
    <string name="title_activity_utils_test2">Utils Activity 2</string>
    <string name="btn_utils_test2">Test</string>
    <string name="message_process_utils_test">Process Utils Test</string>
    <string name="message_dialog_test">Dialog Test</string>
    <string name="message_global_dialog_test">Global Dialog Test</string>
    <string name="message_popup_window_test">Popup Window Test</string>
    <string name="message_floating_window_test">Floating Window Test</string>
    <string name="btn_fps_test">FPS Test</string>
    <string name="message_fps_test">Frames Per Second Test</string>

    <!-- jacoco instrumentation activity -->
    <string name="title_activity_jacoco_test">Jacoco Instrumentation Activity</string>

    <!-- dialog, popup and floating window-->
    <string name="dialog_content">Dialog content</string>
    <string name="popup_window_content">Popup window content</string>
    <string name="floating_window_content">Floating window content</string>

</resources>
