<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengjin.funsettingsuitest.activity.ActivityUtilsTest">

    <Button
        android:id="@+id/btn_device_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_utils_test" />

    <TextView
        android:id="@+id/text_device_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_device_utils_test" />

    <Button
        android:id="@+id/btn_shell_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_utils_test" />

    <TextView
        android:id="@+id/text_shell_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_shell_utils_test" />

    <Button
        android:id="@+id/btn_pkg_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_utils_test" />

    <TextView
        android:id="@+id/text_pkg_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_package_utils_test" />

    <Button
        android:id="@+id/btn_start_activity_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_utils_test" />

    <TextView
        android:id="@+id/text_start_activity_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_start_activity_test" />

    <Button
        android:id="@+id/btn_file_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_utils_test" />

    <TextView
        android:id="@+id/text_file_utils_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_file_utils_test" />

</LinearLayout>
