<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelDemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_demo" />

            <Button
                android:id="@+id/btnStartDemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelRunTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_run_instruments" />

            <Button
                android:id="@+id/btnStartInstTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnExitApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit" />

</LinearLayout>
